update image url

--- a/How-is-Learning-Possible?.ipynb
+++ b/How-is-Learning-Possible?.ipynb
@@ -43,7 +43,7 @@
     "\n",
     "Our function is big but easy to characterize. Because it has 100 inputs, it must have $2^{100}$ possible configurations of these inputs. They'll look like this:\n",
     "\n",
-    "![Boolean Function](Images/boolean-function.png)\n",
+    "![Boolean Function](https://github.com/jsub10/In-Progress/Images/boolean-function.png)\n",
     "\n",
     "If I have a trillion known outputs on which to train my machine learning system, then I don't know the outputs of $2^{100} - 2^{12}$ of the function. There are $2^{(2^{100} - 2^{12})}$ different functions that will fit the data set! If you're keeping track, that's roughly $2^{10^{30}}$ different ways the function can be completed.\n",
     "\n",
