explain NFL world

--- a/How-is-Learning-Possible?.ipynb
+++ b/How-is-Learning-Possible?.ipynb
@@ -60,7 +60,11 @@
     "\n",
     "The simple answer to why machine learning is possible rests on something truly magical -- our world is such that not every one of the $2^{10^{30}}$ possible functions has the same probability of occurring. In fact, it turns out that some of these functions (a small handful) are extremely probable. This gives the right learning algorithm a huge advantage over simply flipping a coin. In other words, there's some kind of structure in this world and this saves us from just having to guess at random. The reason that a machine learning algorithm is successful is because it encodes the right assumptions about this structure.\n",
     "\n",
-    "As the computer scientist Pedro Domingos puts it, \n",
+    "The No Free Lunch theorems are mathematical results that set broad limits to learning. If you know nothing at all about the world, then yes, you'd best flip a coin. But we do seem to know a bit about the structure of the world. The future does seem to resemble the past in some ways, although it's wise to add that we can be easily fooled in *exactly what ways*. Regardless, planes don't fall out the sky, taking aspirin always helps my headache, and so on. \n",
+    "\n",
+    "There's a big difference between a world like ours where prediction is *hard* and a world in which prediction is *pointless* -- where, as the No Free Lunch results say, you might as well just flip a coin. Such a world would be one where (probably) most of the diseases we face would be like cancer, our physical laws would have multiple plausible solutions, or these laws may be such that they don't apply in the same way in all parts of the world. In such a world it could well be that taking an aspirin might make my headache worse or not make any difference from one day to the next. It's also good to remember that we're often making predictions about human behavior. And those patterns of behavior were as well known to Thucydides as they are to Tom Wolfe!\n",
+    "\n",
+    "So, as the computer scientist Pedro Domingos puts it, \n",
     "\n",
     "> \"Machine learning is not magic; it can't get something from nothing. ...Learning is more like farming, which lets nature do most of the work. Farmers combine seeds with nutrients to grow crops. Learners combine knowledge with data to grow programs.\"\n",
     "\n",
