--- a/Can-Machines-Decide-What's-Worthwhile?.ipynb
+++ b/Can-Machines-Decide-What's-Worthwhile?.ipynb
@@ -4,13 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Can Machines Decide What's Worthwhile?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "# Can Machines Decide What's Worthwhile?\n",
+    "\n",
     "## Is it Worthwhile?\n",
     "\n",
     "As a graduate student I periodically attended talks in the mathematics department. It would always be the same. A professor in the department would introduce the speaker. The speaker would read from a sheaf of papers and occasionally write or draw on the chalkboard. After an hour the speaker would finish and the professor would ask if there were any questions. Invariably there would be none. We'd all applaud the speaker and be off on our separate ways.\n",
@@ -58,15 +53,6 @@
     "\n",
     "The real limit to what machines can accomplish could ultimately be a reflection of our own limit in answering questions like *what is it for something to be worthwhile?*"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
