--- a/Invoice-Routing-Narrative.ipynb
+++ b/Invoice-Routing-Narrative.ipynb
@@ -76,7 +76,7 @@
    "source": [
     "Even a relatively low-accuracy machine learning system can reduce the number of stuck invoices by 60% to 80% over the current baseline state. \n",
     "\n",
-    "### Summary\n",
+    "## Summary\n",
     "\n",
     "- It is very hard if not impossible for a machine learning system to replicate the accuracy of an AP specialist.\n",
     "- However, routing invoices through a machine learning system before they get to the AP specialists drastically cuts down the number of invoices that the AP specialists need to handle. \n",
