update text and readme

--- a/Invoice-Routing-Narrative.ipynb
+++ b/Invoice-Routing-Narrative.ipynb
@@ -20,30 +20,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "At Synaptiq we were recently asked to help with a scheduling problem of sorts. Here's how we put machine learning to use.\n",
+    "At Synaptiq we were recently asked to help with a scheduling problem of sorts. Here's how we can put machine learning to use.\n",
     "\n",
     "\n",
     "## The Situation\n",
     "\n",
-    "A company's Accounts Payable (AP) division receives invoices from thousands of vendors daily. Invoices go to a team of AP specialits who share the load of sorting invoices into routing queues. A specialist takes some time to route each invoice and can occasionally make a mistake in routing an invoice. The routing accuracy of specialits is high - they get it right 95% of the time.\n",
+    "A company's Accounts Payable (AP) division receives invoices from thousands of vendors daily. Invoices go to a team of AP specialists who share the load of sorting invoices into routing queues. A specialist takes some time to route each invoice and can occasionally make a mistake in routing an invoice. On the whole, AP specialists are very good at their jobs -- they they get it right 95% of the time.\n",
     "\n",
-    "In the occasional instance when such a mistake is made, the invoice needs to be scrutinized more carefully and re-routed correctly. This \"high-touch\" scenario takes much more time than doing it correctly the first time around. \n",
+    "On the occasional instance when they make a mistake and the invoice gets wrongly routed, the invoice needs to be scrutinized more carefully and re-routed correctly. This \"high-touch\" scenario takes substantially more time to sort out.\n",
     "\n",
-    "When there are a large number of invoices that enter the AP system, eventually, time runs out to handle and fix these wrongly routed invoices. These invoices end up in approval limbo, and come the end of the month make it hard to efficiently and accurately close the books.\n",
+    "But the AP team don't always have the luxury of time. The monthly closing of the books is an unescapable event. When there are a large number of invoices that enter the AP process, eventually, time runs out to handle and fix a portion of the wrongly routed invoices. These invoices end up in approval limbo; come the end of the month they make it hard to efficiently and accurately close the books.\n",
+    "\n",
     "\n",
     "## Can Machine Learning Help?\n",
     "\n",
-    "AP specialits handle the difficult problem of routing invoices with aplomb. The accuracy with which they route invoices is already at 95%. It's very hard for a machine learning model to come close to this level of accuracy.\n",
+    "AP specialists are great at their jobs -- their routing accuracy rate is 95%. It's very hard for a machine learning model to come close to this level of accuracy.\n",
     "\n",
     "But when it comes to a machine learning solution, there's more to consider than just accuracy. There's also _automation_. What if we build a machine learning model to route invoices _and then_ send the only the ones that were wrongly sorted to the AP specialists? That would cut down their workload by quite a bit and enable them to spend their time on the relatively smaller \"high-touch\" items.\n",
     "\n",
     "In this case, instead of relying on a machine learning model to route with high accuracy, we rely on the model to automate the routing of the relatively easy invoices and leave the difficult ones for the human specialists. This lets the humans concentrate on the things they do best and gives them more time to do what they do best.\n",
     "\n",
+    "\n",
     "## Quantifying the Benefit of Automation Through Machine Learning\n",
     "\n",
-    "Let's find out how and by how much machine learning can help.\n",
-    "\n",
-    "To quantify the benefit of automation via machine learning, we made some assumptions.\n",
+    "Let's find out how and by how much a machine learning model can help. Let's make some assumptions about the AP process. \\(To view the details and plug in your own values, go [here]()\n",
     "\n",
     "- The number of invoices a vendor sends in a day can be modeled as a [Poisson process](https://www.khanacademy.org/math/statistics-probability/random-variables-stats-library/poisson-distribution/v/poisson-process-1). For a specific company we can find out this number; say, on average, 500 invoices a day. The $\\mu$ parameter in the Poisson process has to be set appropriately to equal this number.\n",
     "- Once $\\mu$ is set, the number of invoices generated per day obviously also depends on the number of vendors who are generating those invoices. We assume the company has 2,500 vendors.\n",
@@ -53,7 +53,7 @@
     "- It takes on average 90 seconds for an AP specialist to route an invoice; the automated machine learning system can route an invoice in under a second.\n",
     "- Finally, we assume that it takes much longer to correctly re-route inovices that have been incorrectly routed. The time it takes to remedy this problem can take between 1 and 4 hours on average.\n",
     "\n",
-    "Check out the code here."
+    "For more details, check out the code [here](https://nbviewer.jupyter.org/github/jsub10/In-Progress/blob/master/Invoice-Routing-Functions.ipynb)."
    ]
   },
   {
@@ -74,23 +74,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Even a relatively low-accuracy machine learning system can reduce the number of stuck invoices by 60% to 80% over the current baseline state. \n",
+    "Even a relatively low-accuracy machine learning system can reduce the number of stuck invoices by 60% to 80% over the current baseline state \\(the blue line at the bottom indicating a zero percent reduction in unapproved invoices at the end of the month.\\)\n",
     "\n",
+    "Depending on the average time it takes to fix an incorrectly routed invoice, introducing the machine learning model at the start of the AP process can eliminate the problem altogether. The yellow and grey lines show that when the accuracy of the ML model is at or above 70% and it takes on average an hour to fix the problem, the problem of stuck invoices is eliminated - there is a 100% reduction in unapproved invoices.\n",
+    "\n",
+    "As the time to fix the incorrectly routed invoices increases to 2, 3, and 4 hours, the percentage reduction in the number of unapproved invoices at the month's close drops (i.e., more invoices are stuck). But even when the machine learning model is only 70% accurate, the number of invoices that are stuck are reduced by 60% compared to the baseline situation where no machine learning model is used."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Summary\n",
     "\n",
     "- It is very hard if not impossible for a machine learning system to replicate the accuracy of an AP specialist.\n",
     "- However, routing invoices through a machine learning system before they get to the AP specialists drastically cuts down the number of invoices that the AP specialists need to handle. \n",
     "- This frees them up to focus on a smaller number of wrongly routed invoices.\n",
     "- Because there are a smaller number of invoices to start with, there is less risk of running out of time by the month’s close.\n",
-    "- Acting as an automated routing \"filter\" at the top of the invoice pipeline, even a machine learning system of moderate accuracy can significantly improve the end-of-month accruals and closing of books process.\n"
+    "- Acting as an automated routing \"filter\" at the top of the invoice pipeline, even a machine learning system of moderate accuracy can significantly improve the end-of-month accruals and closing-of-books processes.\n",
+    "\n",
+    "For more details, check out the code [here](https://nbviewer.jupyter.org/github/jsub10/In-Progress/blob/master/Invoice-Routing-Functions.ipynb)."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
