--- a/Invoice-Routing-Narrative.ipynb
+++ b/Invoice-Routing-Narrative.ipynb
@@ -29,24 +29,24 @@
     "\n",
     "On the occasional instance when they make a mistake and the invoice gets wrongly routed, the invoice needs to be scrutinized more carefully and re-routed correctly. This \"high-touch\" scenario takes substantially more time to sort out.\n",
     "\n",
-    "But the AP team don't always have the luxury of time. The monthly closing of the books is an unescapable event. When there are a large number of invoices that enter the AP process, eventually, time runs out to handle and fix a portion of the wrongly routed invoices. These invoices end up in approval limbo; come the end of the month they make it hard to efficiently and accurately close the books.\n",
+    "But the AP team doesn't always have the luxury of time. The monthly closing of the books is an unescapable event. When there are a large number of invoices that enter the AP process, eventually, time runs out to handle and fix a portion of the wrongly routed invoices. These invoices end up in approval limbo; come the end of the month they make it hard to efficiently and accurately close the books.\n",
     "\n",
     "\n",
     "## Can Machine Learning Help?\n",
     "\n",
     "AP specialists are great at their jobs -- their routing accuracy rate is 95%. It's very hard for a machine learning model to come close to this level of accuracy.\n",
     "\n",
-    "But when it comes to a machine learning solution, there's more to consider than just accuracy. There's also _automation_. What if we build a machine learning model to route invoices _and then_ send the only the ones that were wrongly sorted to the AP specialists? That would cut down their workload by quite a bit and enable them to spend their time on the relatively smaller \"high-touch\" items.\n",
+    "But when it comes to a machine learning solution, there's more to consider than just accuracy. There's also _automation_. What if we build a machine learning model to route invoices _and then_ send only the ones that were wrongly sorted to the AP specialists? That would cut down their workload by quite a bit and enable them to spend their time on the relatively smaller \"high-touch\" items.\n",
     "\n",
     "In this case, instead of relying on a machine learning model to route with high accuracy, we rely on the model to automate the routing of the relatively easy invoices and leave the difficult ones for the human specialists. This lets the humans concentrate on the things they do best and gives them more time to do what they do best.\n",
     "\n",
     "\n",
     "## Quantifying the Benefit of Automation Through Machine Learning\n",
     "\n",
-    "Let's find out how and by how much a machine learning model can help. Let's make some assumptions about the AP process. \\(To view the details and plug in your own values, go [here]()\n",
+    "Let's find out how and by how much a machine learning model can help. Let's make some assumptions about the AP process. \\(To view the details and plug in your own values, go [here.](https://nbviewer.jupyter.org/github/jsub10/In-Progress/blob/master/Invoice-Routing-Functions.ipynb)\\)\n",
     "\n",
-    "- The number of invoices a vendor sends in a day can be modeled as a [Poisson process](https://www.khanacademy.org/math/statistics-probability/random-variables-stats-library/poisson-distribution/v/poisson-process-1). For a specific company we can find out this number; say, on average, 500 invoices a day. The $\\mu$ parameter in the Poisson process has to be set appropriately to equal this number.\n",
-    "- Once $\\mu$ is set, the number of invoices generated per day obviously also depends on the number of vendors who are generating those invoices. We assume the company has 2,500 vendors.\n",
+    "- The number of invoices a vendor sends in a day can be modeled as a [Poisson process](https://www.khanacademy.org/math/statistics-probability/random-variables-stats-library/poisson-distribution/v/poisson-process-1). The $\\mu$ parameter in the Poisson process has to be set appropriately to equal the number of invoices that get into the AP process pipleline every month.\n",
+    "- Once $\\mu$ is set, the number of invoices generated per day also depends on the number of vendors who are generating those invoices. We assume the company has 2,500 vendors.\n",
     "- The company has 4 AP specialists and they each deal with routing invoices 6.5 hours a day.\n",
     "- There are 20 business days a month. \n",
     "- Specialists are 95% accurate at routing invoices correctly. At best, a machine learning model is only 80% accurate in routing invoices correctly.\n",
