--- a/Invoice-Routing-Narrative.ipynb
+++ b/Invoice-Routing-Narrative.ipynb
@@ -67,18 +67,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"./Images/Invoice-Percentage-Estimates.png\" alt=\"Percentage Reduction in Stuck Invoices\" style=\"width: 500px;\"/>"
+    "<img src=\"./Images/Invoice-Indexed-Estimates.png\" alt=\"Percentage Reduction in Stuck Invoices\" style=\"width: 500px;\"/>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Even a relatively low-accuracy machine learning system can reduce the number of stuck invoices by 60% to 80% over the current baseline state \\(the blue line at the bottom indicating a zero percent reduction in unapproved invoices at the end of the month.\\)\n",
+    "Let's say the current situation results in 100 unapproved invoices at the end of the month. Even a relatively low-accuracy machine learning system can reduce the number of stuck invoices by more than half to 41 -- see the red line representing a machine learning (ML) model which is only 50\\% accurate in a scenario where it takes 4 hours on average to fix a routing problem. When the ML model's efficieny is increased to a moderate 70%, only 18 invoices are stuck in the system rather than 100. That's a reduction of 82% in stuck invoices.\n",
     "\n",
-    "Depending on the average time it takes to fix an incorrectly routed invoice, introducing the machine learning model at the start of the AP process can eliminate the problem altogether. The yellow and grey lines show that when the accuracy of the ML model is at or above 70% and it takes on average an hour to fix the problem, the problem of stuck invoices is eliminated - there is a 100% reduction in unapproved invoices.\n",
-    "\n",
-    "As the time to fix the incorrectly routed invoices increases to 2, 3, and 4 hours, the percentage reduction in the number of unapproved invoices at the month's close drops (i.e., more invoices are stuck). But even when the machine learning model is only 70% accurate, the number of invoices that are stuck are reduced by 60% compared to the baseline situation where no machine learning model is used."
+    "And depending on the average time it takes to fix an incorrectly routed invoice, introducing the machine learning model at the start of the AP process can eliminate the problem altogether. The yellow and grey lines show that when the accuracy of the ML model is at or above 70% and it takes on average an hour to fix the problem, the problem of stuck invoices is eliminated - there are no unapproved invoices in the system at the end of the month!"
    ]
   },
   {
