--- a/Invoice-Routing-Narrative.ipynb
+++ b/Invoice-Routing-Narrative.ipynb
@@ -74,9 +74,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's say the current situation results in 100 unapproved invoices at the end of the month. Even a relatively low-accuracy machine learning system can reduce the number of stuck invoices by more than half to 41 -- see the red line representing a machine learning (ML) model which is only 50\\% accurate in a scenario where it takes 4 hours on average to fix a routing problem. When the ML model's efficieny is increased to a moderate 70%, only 18 invoices are stuck in the system rather than 100. That's a reduction of 82% in stuck invoices.\n",
+    "Let's say the current situation results in 100 unapproved invoices at the end of the month. Even a relatively low-accuracy machine learning system can reduce the number of stuck invoices by more than half to 41 -- see the red line representing a machine learning (ML) model which is only 50% accurate in a scenario where it takes 4 hours on average to fix a routing problem. When the ML model's efficiency is increased to a moderate 70%, only 18 invoices are stuck in the system rather than 100. That's a reduction of 82% in stuck invoices.\n",
     "\n",
-    "And depending on the average time it takes to fix an incorrectly routed invoice, introducing the machine learning model at the start of the AP process can eliminate the problem altogether. The yellow and grey lines show that when the accuracy of the ML model is at or above 70% and it takes on average an hour to fix the problem, the problem of stuck invoices is eliminated - there are no unapproved invoices in the system at the end of the month!"
+    "And depending on the average time it takes to fix an incorrectly routed invoice, introducing the machine learning model at the start of the AP process can eliminate the problem altogether. The yellow and grey lines show that when the accuracy of the ML model is at 70%, and it takes on average an hour to fix the problem, the problem of stuck invoices is eliminated - there are no unapproved invoices in the system at the end of the month!"
    ]
   },
   {
